Fix preloader spacing

--- a/src/components/Preloader.css
+++ b/src/components/Preloader.css
@@ -51,7 +51,7 @@
   display: flex;
   background: rgb(80, 80, 80);
   z-index: 10001;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .loader-1 {
@@ -96,7 +96,7 @@
   text-align: center;
   position: relative;
   top: 80px;
-  margin: 20px 0;
+  margin: 0;
   text-transform: uppercase;
   font-weight: 900;
   font-family: 'Inter', sans-serif;
@@ -107,11 +107,11 @@
 }
 
 .preloader-title:first-child {
-  margin-bottom: 80px;
+  margin-bottom: 45px;
 }
 
 .preloader-title:last-child {
-  margin-top: 80px;
+  margin-top: 45px;
 }
 
 @media (max-width: 768px) {
